--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#b0b5c1">
     <!-- icon & css-->
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="/assets/css/main.css?v=4f46c2f" rel="stylesheet"></head>
+  <link href="/assets/css/main.css?v=41d6dd9" rel="stylesheet"></head>
   <body>
     <div id="app">
 <header>
@@ -210,7 +210,7 @@
                       </div>
                     </fieldset>
                     <div class="form__text">
-                      <input class="checkbox" type="checkbox" id="agreement">
+                      <input class="checkbox" type="checkbox" checked id="agreement">
                       <label class="checkbox-label" for="agreement">
                         <svg>
                           <use href="/image/icon/check.svg#check"></use>
@@ -256,7 +256,7 @@
               </div>
               <div class="index__video object">
                 <video autoplay loop muted playsinline>
-                  <source src="/video/main.mp4" type="video/mp4">
+                  <source src="./video/main.mp4" type="video/mp4">
                 </video>
               </div>
             </div>
