--- a/test/index.html
+++ b/test/index.html
@@ -210,7 +210,7 @@
                       </div>
                     </fieldset>
                     <div class="form__text">
-                      <input class="checkbox" type="checkbox" id="agreement">
+                      <input class="checkbox" type="checkbox" id="agreement" checked>
                       <label class="checkbox-label" for="agreement">
                         <svg>
                           <use href="./image/icon/check.svg#check"></use>
@@ -256,7 +256,7 @@
               </div>
               <div class="index__video object">
                 <video autoplay loop muted playsinline>
-                  <source src="/video/main.mp4" type="video/mp4">
+                  <source src="./video/main.mp4" type="video/mp4">
                 </video>
               </div>
             </div>
